Compiler.Parser/Compiler.Parser/obj/Debug/MParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\mariusg\Documents\Visual Studio 2013\Projects\Compiler\Compiler.Parser\Compiler.Parser\MParser.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace Compiler.Parser {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class MParser : Parser {
	public const int
		Double=12, Mod=32, Void=3, GreaterEqual=24, RightBracket=20, Static=9, 
		This=5, LineComment=46, IntegerConstant=42, LessEqual=22, Colon=37, NotEqual=26, 
		AndAnd=33, Equal=25, For=8, Identifier=41, Int=4, StringLiteral=43, Plus=27, 
		Minus=28, Assign=39, Semi=36, Break=1, Comment=45, New=11, Less=21, LeftBrace=17, 
		Not=35, Dot=40, Interface=14, LeftBracket=19, OrOr=34, StarStar=30, String=13, 
		LeftParen=15, Star=29, Class=2, Return=10, RightParen=16, Whitespace=44, 
		Else=7, Comma=38, If=6, Greater=23, Div=31, RightBrace=18, While=47;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'break'", "'class'", "'void'", "'int'", "'this'", "'if'", 
		"'else'", "'for'", "'static'", "'return'", "'new'", "'double'", "'string'", 
		"'interface'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'<'", "'<='", 
		"'>'", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'**'", "'/'", "'%'", 
		"'&&'", "'||'", "'!'", "';'", "':'", "','", "'='", "'.'", "Identifier", 
		"IntegerConstant", "StringLiteral", "Whitespace", "Comment", "LineComment", 
		"While"
	};
	public const int
		RULE_program = 0, RULE_classDecleration = 1, RULE_interfaceDecleration = 2, 
		RULE_member = 3, RULE_prototype = 4, RULE_variableDecleration = 5, RULE_methodDecleration = 6, 
		RULE_parameters = 7, RULE_variable = 8, RULE_type = 9, RULE_statementBlock = 10, 
		RULE_statement = 11, RULE_ifStatement = 12, RULE_whileStatement = 13, 
		RULE_forStatement = 14, RULE_returnStatement = 15, RULE_breakStatement = 16, 
		RULE_expression = 17, RULE_coreExpression = 18, RULE_creator = 19, RULE_methodCall = 20, 
		RULE_arguments = 21, RULE_constant = 22;
	public static readonly string[] ruleNames = {
		"program", "classDecleration", "interfaceDecleration", "member", "prototype", 
		"variableDecleration", "methodDecleration", "parameters", "variable", 
		"type", "statementBlock", "statement", "ifStatement", "whileStatement", 
		"forStatement", "returnStatement", "breakStatement", "expression", "coreExpression", 
		"creator", "methodCall", "arguments", "constant"
	};

	public override string GrammarFileName { get { return "MParser.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public IReadOnlyList<InterfaceDeclerationContext> interfaceDecleration() {
			return GetRuleContexts<InterfaceDeclerationContext>();
		}
		public ITerminalNode Eof() { return GetToken(MParser.Eof, 0); }
		public ClassDeclerationContext classDecleration(int i) {
			return GetRuleContext<ClassDeclerationContext>(i);
		}
		public IReadOnlyList<ClassDeclerationContext> classDecleration() {
			return GetRuleContexts<ClassDeclerationContext>();
		}
		public InterfaceDeclerationContext interfaceDecleration(int i) {
			return GetRuleContext<InterfaceDeclerationContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				State = 48;
				switch (_input.La(1)) {
				case Class:
					{
					State = 46; classDecleration();
					}
					break;
				case Interface:
					{
					State = 47; interfaceDecleration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 50;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==Class || _la==Interface );
			State = 52; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDeclerationContext : ParserRuleContext {
		public ITerminalNode Colon() { return GetToken(MParser.Colon, 0); }
		public ITerminalNode Class() { return GetToken(MParser.Class, 0); }
		public IReadOnlyList<MemberContext> member() {
			return GetRuleContexts<MemberContext>();
		}
		public ITerminalNode RightBrace() { return GetToken(MParser.RightBrace, 0); }
		public ITerminalNode Identifier(int i) {
			return GetToken(MParser.Identifier, i);
		}
		public IReadOnlyList<ITerminalNode> Identifier() { return GetTokens(MParser.Identifier); }
		public MemberContext member(int i) {
			return GetRuleContext<MemberContext>(i);
		}
		public ITerminalNode LeftBrace() { return GetToken(MParser.LeftBrace, 0); }
		public ClassDeclerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDecleration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterClassDecleration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitClassDecleration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDecleration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDeclerationContext classDecleration() {
		ClassDeclerationContext _localctx = new ClassDeclerationContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_classDecleration);
		int _la;
		try {
			State = 76;
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 54; Match(Class);
				State = 55; Match(Identifier);
				State = 56; Match(Colon);
				State = 57; Match(Identifier);
				State = 58; Match(LeftBrace);
				State = 62;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Void) | (1L << Int) | (1L << Static) | (1L << Double) | (1L << String) | (1L << Identifier))) != 0)) {
					{
					{
					State = 59; member();
					}
					}
					State = 64;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 65; Match(RightBrace);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 66; Match(Class);
				State = 67; Match(Identifier);
				State = 68; Match(LeftBrace);
				State = 72;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Void) | (1L << Int) | (1L << Static) | (1L << Double) | (1L << String) | (1L << Identifier))) != 0)) {
					{
					{
					State = 69; member();
					}
					}
					State = 74;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 75; Match(RightBrace);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InterfaceDeclerationContext : ParserRuleContext {
		public ITerminalNode Colon() { return GetToken(MParser.Colon, 0); }
		public PrototypeContext prototype(int i) {
			return GetRuleContext<PrototypeContext>(i);
		}
		public ITerminalNode RightBrace() { return GetToken(MParser.RightBrace, 0); }
		public ITerminalNode Identifier(int i) {
			return GetToken(MParser.Identifier, i);
		}
		public IReadOnlyList<ITerminalNode> Identifier() { return GetTokens(MParser.Identifier); }
		public ITerminalNode Interface() { return GetToken(MParser.Interface, 0); }
		public IReadOnlyList<PrototypeContext> prototype() {
			return GetRuleContexts<PrototypeContext>();
		}
		public ITerminalNode LeftBrace() { return GetToken(MParser.LeftBrace, 0); }
		public InterfaceDeclerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_interfaceDecleration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterInterfaceDecleration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitInterfaceDecleration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInterfaceDecleration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InterfaceDeclerationContext interfaceDecleration() {
		InterfaceDeclerationContext _localctx = new InterfaceDeclerationContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_interfaceDecleration);
		int _la;
		try {
			State = 100;
			switch ( Interpreter.AdaptivePredict(_input,7,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 78; Match(Interface);
				State = 79; Match(Identifier);
				State = 80; Match(Colon);
				State = 81; Match(Identifier);
				State = 82; Match(LeftBrace);
				State = 86;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Void) | (1L << Int) | (1L << Double) | (1L << String) | (1L << Identifier))) != 0)) {
					{
					{
					State = 83; prototype();
					}
					}
					State = 88;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 89; Match(RightBrace);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 90; Match(Interface);
				State = 91; Match(Identifier);
				State = 92; Match(LeftBrace);
				State = 96;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Void) | (1L << Int) | (1L << Double) | (1L << String) | (1L << Identifier))) != 0)) {
					{
					{
					State = 93; prototype();
					}
					}
					State = 98;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 99; Match(RightBrace);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MemberContext : ParserRuleContext {
		public MethodDeclerationContext methodDecleration() {
			return GetRuleContext<MethodDeclerationContext>(0);
		}
		public VariableDeclerationContext variableDecleration() {
			return GetRuleContext<VariableDeclerationContext>(0);
		}
		public MemberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_member; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterMember(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitMember(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMember(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MemberContext member() {
		MemberContext _localctx = new MemberContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_member);
		try {
			State = 104;
			switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 102; methodDecleration();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 103; variableDecleration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrototypeContext : ParserRuleContext {
		public ITerminalNode Semi() { return GetToken(MParser.Semi, 0); }
		public ITerminalNode LeftParen() { return GetToken(MParser.LeftParen, 0); }
		public ITerminalNode RightParen() { return GetToken(MParser.RightParen, 0); }
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ParametersContext parameters() {
			return GetRuleContext<ParametersContext>(0);
		}
		public ITerminalNode Void() { return GetToken(MParser.Void, 0); }
		public PrototypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prototype; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterPrototype(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitPrototype(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrototype(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrototypeContext prototype() {
		PrototypeContext _localctx = new PrototypeContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_prototype);
		int _la;
		try {
			State = 123;
			switch (_input.La(1)) {
			case Void:
				EnterOuterAlt(_localctx, 1);
				{
				State = 106; Match(Void);
				State = 107; Match(Identifier);
				State = 108; Match(LeftParen);
				State = 110;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Double) | (1L << String) | (1L << Identifier))) != 0)) {
					{
					State = 109; parameters();
					}
				}

				State = 112; Match(RightParen);
				State = 113; Match(Semi);
				}
				break;
			case Int:
			case Double:
			case String:
			case Identifier:
				EnterOuterAlt(_localctx, 2);
				{
				State = 114; type(0);
				State = 115; Match(Identifier);
				State = 116; Match(LeftParen);
				State = 118;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Double) | (1L << String) | (1L << Identifier))) != 0)) {
					{
					State = 117; parameters();
					}
				}

				State = 120; Match(RightParen);
				State = 121; Match(Semi);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclerationContext : ParserRuleContext {
		public ITerminalNode Semi() { return GetToken(MParser.Semi, 0); }
		public ITerminalNode Assign() { return GetToken(MParser.Assign, 0); }
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public VariableDeclerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDecleration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterVariableDecleration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitVariableDecleration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDecleration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclerationContext variableDecleration() {
		VariableDeclerationContext _localctx = new VariableDeclerationContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_variableDecleration);
		try {
			State = 135;
			switch ( Interpreter.AdaptivePredict(_input,12,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 125; type(0);
				State = 126; Match(Identifier);
				State = 127; Match(Assign);
				State = 128; expression(0);
				State = 129; Match(Semi);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 131; type(0);
				State = 132; Match(Identifier);
				State = 133; Match(Semi);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodDeclerationContext : ParserRuleContext {
		public ITerminalNode LeftParen() { return GetToken(MParser.LeftParen, 0); }
		public ITerminalNode Static() { return GetToken(MParser.Static, 0); }
		public ITerminalNode RightParen() { return GetToken(MParser.RightParen, 0); }
		public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ParametersContext parameters() {
			return GetRuleContext<ParametersContext>(0);
		}
		public ITerminalNode Void() { return GetToken(MParser.Void, 0); }
		public MethodDeclerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_methodDecleration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterMethodDecleration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitMethodDecleration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodDecleration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodDeclerationContext methodDecleration() {
		MethodDeclerationContext _localctx = new MethodDeclerationContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_methodDecleration);
		int _la;
		try {
			State = 160;
			switch ( Interpreter.AdaptivePredict(_input,17,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 138;
				_la = _input.La(1);
				if (_la==Static) {
					{
					State = 137; Match(Static);
					}
				}

				State = 140; Match(Void);
				State = 141; Match(Identifier);
				State = 142; Match(LeftParen);
				State = 144;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Double) | (1L << String) | (1L << Identifier))) != 0)) {
					{
					State = 143; parameters();
					}
				}

				State = 146; Match(RightParen);
				State = 147; statementBlock();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 149;
				_la = _input.La(1);
				if (_la==Static) {
					{
					State = 148; Match(Static);
					}
				}

				State = 151; type(0);
				State = 152; Match(Identifier);
				State = 153; Match(LeftParen);
				State = 155;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Double) | (1L << String) | (1L << Identifier))) != 0)) {
					{
					State = 154; parameters();
					}
				}

				State = 157; Match(RightParen);
				State = 158; statementBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametersContext : ParserRuleContext {
		public IReadOnlyList<VariableContext> variable() {
			return GetRuleContexts<VariableContext>();
		}
		public VariableContext variable(int i) {
			return GetRuleContext<VariableContext>(i);
		}
		public ITerminalNode Comma(int i) {
			return GetToken(MParser.Comma, i);
		}
		public IReadOnlyList<ITerminalNode> Comma() { return GetTokens(MParser.Comma); }
		public ParametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameters; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterParameters(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitParameters(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameters(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParametersContext parameters() {
		ParametersContext _localctx = new ParametersContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_parameters);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162; variable();
			State = 167;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==Comma) {
				{
				{
				State = 163; Match(Comma);
				State = 164; variable();
				}
				}
				State = 169;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterVariable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitVariable(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableContext variable() {
		VariableContext _localctx = new VariableContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_variable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 170; type(0);
			State = 171; Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public ITerminalNode RightBracket() { return GetToken(MParser.RightBracket, 0); }
		public ITerminalNode String() { return GetToken(MParser.String, 0); }
		public ITerminalNode Double() { return GetToken(MParser.Double, 0); }
		public ITerminalNode LeftBracket() { return GetToken(MParser.LeftBracket, 0); }
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode Int() { return GetToken(MParser.Int, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		return type(0);
	}

	private TypeContext type(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 18;
		EnterRecursionRule(_localctx, 18, RULE_type, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 178;
			switch (_input.La(1)) {
			case Int:
				{
				State = 174; Match(Int);
				}
				break;
			case String:
				{
				State = 175; Match(String);
				}
				break;
			case Double:
				{
				State = 176; Match(Double);
				}
				break;
			case Identifier:
				{
				State = 177; Match(Identifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.Lt(-1);
			State = 185;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,20,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_type);
					State = 180;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 181; Match(LeftBracket);
					State = 182; Match(RightBracket);
					}
					} 
				}
				State = 187;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,20,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
